--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-vue": "^5.0.0",
     "faker": "^4.1.0",
     "lint-staged": "^8.1.5",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.4.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
